[package]
name = "vm-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
vm-core = { path = "../vm-core" }
vm-service = { path = "../vm-service" }
vm-osal = { path = "../vm-osal" }
vm-device = { path = "../vm-device" } # For HardwareDetector if needed
tokio = { version = "1", features = ["full"] }
env_logger = "0.11"
log = "0.4"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
