[package]
name = "vm-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
# Hakari-managed dependencies
vm-build-deps = { path = "../vm-build-deps" }
vm-core = { path = "../vm-core" }
vm-service = { path = "../vm-service" }
vm-osal = { path = "../vm-osal" }
vm-device = { path = "../vm-device" } # For HardwareDetector if needed
# vm-cli uses: macros (tokio::main), rt-multi-thread (for async main)
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
env_logger = "0.11"
log = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dirs = "5.0"
colored = "2.1"
