[package]
name = "vm-core"
version.workspace = true
edition.workspace = true

[dependencies]
log.workspace = true
tracing.workspace = true
parking_lot.workspace = true
serde.workspace = true
uuid.workspace = true
serde_json = { workspace = true, optional = true }
chrono = { workspace = true, optional = true }
bincode.workspace = true
sqlx = { workspace = true, optional = true }
thiserror.workspace = true

# Local dependencies
vm-common = { path = "../vm-common" }
vm-error = { path = "../vm-error" }

[features]
default = ["std"]
# Standard library support
std = []
no_std = []
# Async runtime support
async = ["tokio", "futures", "async-trait"]
# Enhanced features
enhanced-event-sourcing = ["sqlx", "serde_json", "chrono"]
enhanced-debugging = [] # 启用增强的调试功能（符号表、调用栈跟踪、增强断点等）
# Encoding/register/memory-access modules (merged from separate packages)
encoding = []
register = []
memory-access = []

[dependencies.tokio]
workspace = true
optional = true

[dependencies.futures]
workspace = true
optional = true

[dependencies.async-trait]
workspace = true
optional = true
