[package]
name = "vm-core"
version = "0.1.0"
edition = "2024"



[dependencies]
log = { workspace = true }
parking_lot = { workspace = true }

serde = { workspace = true }
uuid = { workspace = true }
serde_json = { workspace = true, optional = true }
chrono = { workspace = true, optional = true }
miniz_oxide = { workspace = true }

bincode = { workspace = true }

# Optional dependencies for enhanced features
sqlx = { workspace = true, optional = true }

# Local dependencies
vm-common = { path = "../vm-common" }

[features]
default = ["std"]
std = ["serde_json"]
async = ["tokio", "futures", "async-trait"]
debug = ["std"]

[dependencies.tokio]
workspace = true
optional = true

[dependencies.futures]
workspace = true
optional = true

[dependencies.async-trait]
workspace = true
optional = true

