[package]
name = "vm-core"
version = "0.1.0"
edition = "2024"



[dependencies]
log = { workspace = true }
parking_lot = { workspace = true }

serde = { workspace = true }
uuid = { workspace = true }
serde_json = { workspace = true }
toml = "0.8"
chrono = { workspace = true, optional = true }
miniz_oxide = { workspace = true }

bincode = { workspace = true }

# Dependencies from merged vm-common
anyhow = { workspace = true }
thiserror = { workspace = true }

# Dependencies from merged vm-foundation
regex = "1.0"
backtrace = "0.3"

[features]
default = ["std"]
std = []
async = ["tokio", "futures", "async-trait"]
debug = ["std"]
# Merged features from vm-common and vm-foundation
common = []
foundation = []

[dependencies.tokio]
workspace = true
optional = true

[dependencies.futures]
workspace = true
optional = true

[dependencies.async-trait]
workspace = true
optional = true

