[package]
name = "vm-cross-arch"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
# Core dependencies (keep)
vm-core = { path = "../vm-core" }
vm-ir = { path = "../vm-ir" }
vm-cross-arch-support = { path = "../vm-cross-arch-support" }

# Optional execution engines (feature-gated)
vm-engine-interpreter = { path = "../vm-engine-interpreter", optional = true }
vm-engine-jit = { path = "../vm-engine-jit", optional = true }

# Optional memory support (feature-gated)
vm-mem = { path = "../vm-mem", optional = true }

# Optional runtime support (feature-gated, for GC)
vm-runtime = { path = "../vm-runtime", optional = true }

# Optional GC support (feature-gated)
vm-optimizers = { path = "../vm-optimizers", optional = true }
vm-boot = { path = "../vm-boot", optional = true }

# Optional frontend decoders (feature-gated)
vm-frontend = { path = "../vm-frontend", optional = true }

# Utility dependencies (keep - actually used)
thiserror = { workspace = true }
tracing = "0.1"
fastrand = "2.0"
num_cpus = "1.16"
cfg-if = "1.0"

[features]
default = []

# Execution engine features
interpreter = ["vm-engine-interpreter"]
jit = ["vm-engine-jit", "vm-mem"]

# Component features (can be combined as needed)
memory = ["vm-mem"]
runtime = ["vm-runtime"]
gc = ["vm-optimizers", "vm-boot"]
frontend = ["vm-frontend"]

# All features combined (execution + memory + runtime + frontend + gc)
all = ["interpreter", "jit", "memory", "runtime", "frontend", "gc"]

[dev-dependencies]
vm-tests = { path = "../vm-tests" }

[[example]]
name = "unified_cross_arch_execution"
path = "../examples/unified_cross_arch_execution.rs"

