[package]
name = "vm-desktop"
version = "0.1.0"
edition = "2024"
authors = ["VM Development Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/example/vm"
keywords = ["virtual-machine", "ui", "tauri", "desktop"]
categories = ["gui"]

[[bin]]
name = "vm-desktop"
path = "src-tauri/main.rs"

[lib]
name = "vm_desktop"
path = "src/lib.rs"

[dependencies]
# Hakari-managed dependencies
vm-build-deps = { path = "../vm-build-deps" }
tauri = "2.0"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt", "sync", "time"] }
uuid = { workspace = true }
dirs = "5.0"
log = { workspace = true }
image = "0.25"
rand = "0.8"
vm-core = { path = "../vm-core" }
vm-service = { path = "../vm-service" }

[build-dependencies]
tauri-build = "2.0"

[features]
default = []

