[package]
name = "vm-device"
version = "0.1.0"
edition = "2021"

[dependencies]
vm-core = { path = "../vm-core" }
vm-osal = { path = "../vm-osal" }
vm-passthrough = { path = "../vm-passthrough" }
wgpu = "27"
winit = "0.30"
pollster = "0.4"
log = "0.4"
# vfio-ioctls = "0.4"  # Temporarily disabled due to dependency conflicts with kvm-ioctls
vfio-bindings = "0.6"
uuid = { version = "1", features = ["v4"] }






[dependencies.libc]
version = "0.2"
optional = true

[target.'cfg(unix)'.dependencies]
libc = "0.2"
