[package]
name = "vm-device"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[features]
default = ["async-io", "smoltcp", "std"]
std = []
async-io = []
io_uring = ["tokio-uring"]
smoltcp = ["dep:smoltcp"]
simple-devices = []

[dependencies]
vm-core = { path = "../vm-core" }
vm-osal = { path = "../vm-osal" }
vm-passthrough = { path = "../vm-passthrough" }
vm-mem = { path = "../vm-mem" }
bincode = { version = "2.0.1", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
wgpu = "27"
winit = "0.30"
pollster = "0.4"
log = "0.4"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
parking_lot = "0.12.5"
uuid = { version = "1", features = ["v4"] }
libc = "0.2"
smoltcp = { version = "0.12", optional = true }

# Platform-specific dependencies
[target.'cfg(target_os = "linux")'.dependencies]
tokio-uring = { version = "0.5", optional = true }
# vfio-ioctls = "0.4"  # Temporarily disabled due to dependency conflicts with kvm-ioctls
vfio-bindings = "0.6"
