[package]
name = "vm-device"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[features]
default = ["std"]
std = []
# Network stack support (using smoltcp)
smoltcp = ["dep:smoltcp"]
# SMMU support (IOMMU for device DMA)
smmu = ["dep:vm-smmu", "vm-accel/smmu"]

[dependencies]
vm-core = { path = "../vm-core" }
vm-osal = { path = "../vm-osal" }
vm-passthrough = { path = "../vm-passthrough" }
vm-mem = { path = "../vm-mem" }
vm-accel = { path = "../vm-accel", optional = true }
vm-smmu = { path = "../vm-smmu", optional = true }
bincode = { workspace = true }
serde = { workspace = true }
wgpu = { workspace = true }
winit = { workspace = true }
pollster = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
# vm-device uses: sync (Mutex, mpsc, oneshot, Semaphore), rt-multi-thread (tokio::spawn), fs (File), io-util (AsyncReadExt, AsyncSeekExt, AsyncWriteExt), time (sleep), macros (tokio::test)
tokio = { workspace = true }
parking_lot = { workspace = true }
uuid = { workspace = true }
libc = { workspace = true }
smoltcp = { workspace = true, optional = true }

[dev-dependencies]
tokio-test = { workspace = true }

# Platform-specific dependencies
[target.'cfg(target_os = "linux")'.dependencies]
tokio-uring = { workspace = true, optional = true }
# vfio-ioctls = "0.4"  # Temporarily disabled due to dependency conflicts with kvm-ioctls
vfio-bindings = { workspace = true }
