[package]
name = "vm-engine-hybrid"
version = "0.1.0"
edition = "2021"

[dependencies]
vm-core = { path = "../vm-core" }
vm-ir = { path = "../vm-ir" }
vm-engine-interpreter = { path = "../vm-engine-interpreter" }
vm-engine-jit = { path = "../vm-engine-jit" }

[dev-dependencies]
vm-mem = { path = "../vm-mem" }
