[package]
name = "vm-engine-jit"
version = "0.1.0"
edition = "2024"

[dependencies]
vm-core = { path = "../vm-core" }
vm-ir = { path = "../vm-ir" }
vm-accel = { path = "../vm-accel" }
vm-foundation = { path = "../vm-foundation" }
parking_lot = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = "3.0"
log = { workspace = true }
# vm-engine-jit doesn't directly use tokio but may need it for tests
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
rand = { workspace = true }
criterion = { version = "0.5", features = ["html_reports"] }
num_cpus = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
cfg-if = "1.0"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_System_Memory"] }

[target.'cfg(any(target_os = "linux", target_os = "macos"))'.dependencies]
libc = { workspace = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[features]
default = []