[package]
name = "vm-error"
version = "0.1.0"
edition = "2021"
description = "Unified error handling framework for VM project"

[dependencies]
vm-common = { path = "../vm-common" }
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
log = "0.4"
backtrace = "0.3"

[features]
default = ["std"]
std = []
no_std = []
